# team3

./: .gitignore
cartographer_ros/configuration_files/: a3.yaml  carto_local.lua  jetracer.lua
cartographer_ros/launch/: cartographer.launch.py
cartographer_ros/map/: b3.pbstream  map.pbstream
control/: package.xml
control/control/: control.py
global_planner/: package.xml
global_planner/global_planner/: global_global.py  global_planner_scenario.py
iahrs_driver/src/: iahrs_driver.cpp
local_planner/: package.xml  setup.py
local_planner/install/: local_setup.sh  setup.bash
local_planner/launch/: full_sim.launch.py
local_planner/local_planner/: hybrid_a_star.py
local_planner/param/: dwb_config.yaml
log/: latest_list
map_planner/: package.xml  setup.cfg  setup.py
my_global_plan_bag/: metadata.yaml  my_global_plan_bag_0.db3  설명서.txt
my_joystick_control_pkg/: package.xml  setup.cfg  setup.py
my_joystick_control_pkg/config/: teleop_twist_joy.yaml
my_joystick_control_pkg/launch/: joystick_control.launch.py
my_joystick_control_pkg/my_joystick_control_pkg/: joystick_to_steering.py
pid_controller/: package.xml  setup.py
pure_pursuit_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
pure_pursuit_control/config/: vector_pursuit_controller.yaml
pure_pursuit_control/launch/: nav2_controller_only.launch.py
pure_pursuit_control/pure_pursuit_control/: control_pure_pursuit.py  dummy_path_publisher.py  dummy_pose_publisher.py  dummy_tracking_distance_publisher.py  open_loop_path_follower.py  pure_pursuit.py  pure_pursuit_node.py
speed_yolo/: package.xml  setup.cfg  setup.py
src/local_planner/install/local_planner/share/local_planner/: package.xml
steering_yolo/: package.xml  setup.cfg  setup.py
(+32 files in other folders)
